--- a/TODOList/TODOList/Goals/View/UISwitchViewSection.xib
+++ b/TODOList/TODOList/Goals/View/UISwitchViewSection.xib
@@ -21,15 +21,25 @@
                         <action selector="onValueChange:" destination="iN0-l3-epB" eventType="valueChanged" id="S4O-UD-YjD"/>
                     </connections>
                 </switch>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FP3-6L-7HO">
+                    <rect key="frame" x="15" y="17" width="271" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.0" green="0.67843137249999996" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstItem="FP3-6L-7HO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="4M8-2w-55l"/>
                 <constraint firstAttribute="trailing" secondItem="XW7-PE-Tai" secondAttribute="trailing" constant="15" id="Wg0-xe-DkP"/>
+                <constraint firstItem="FP3-6L-7HO" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="bcr-5i-6Tr"/>
                 <constraint firstItem="XW7-PE-Tai" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="lEx-Hc-YAx"/>
+                <constraint firstItem="XW7-PE-Tai" firstAttribute="leading" secondItem="FP3-6L-7HO" secondAttribute="trailing" constant="8" id="pNl-fC-gkC"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="labelTitle" destination="FP3-6L-7HO" id="vez-zq-iYi"/>
                 <outlet property="switchView" destination="XW7-PE-Tai" id="2yt-sJ-Hb2"/>
             </connections>
             <point key="canvasLocation" x="17" y="-254.5"/>
