--- a/TODOList/TODOList/Base.lproj/Main.storyboard
+++ b/TODOList/TODOList/Base.lproj/Main.storyboard
@@ -179,6 +179,41 @@
             </objects>
             <point key="canvasLocation" x="1532" y="974.6626686656673"/>
         </scene>
+        <!--查看-->
+        <scene sceneID="NI7-Nn-iKZ">
+            <objects>
+                <viewController storyboardIdentifier="GoalBrowseViewController" id="Mir-aP-lOn" customClass="GoalBrowseViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mrn-6Z-M91"/>
+                        <viewControllerLayoutGuide type="bottom" id="Yh4-jf-9Cf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Z0Z-nO-QL5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="K2s-Y5-9C1">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="K2s-Y5-9C1" secondAttribute="trailing" id="Mzz-Mk-m4F"/>
+                            <constraint firstItem="Yh4-jf-9Cf" firstAttribute="top" secondItem="K2s-Y5-9C1" secondAttribute="bottom" id="QeH-to-TrV"/>
+                            <constraint firstItem="K2s-Y5-9C1" firstAttribute="leading" secondItem="Z0Z-nO-QL5" secondAttribute="leading" id="c4d-gG-sxs"/>
+                            <constraint firstItem="K2s-Y5-9C1" firstAttribute="top" secondItem="Z0Z-nO-QL5" secondAttribute="top" id="tp4-P0-2uU"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="查看" id="MS6-RL-C5S"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="tableView" destination="K2s-Y5-9C1" id="531-T0-dZG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hy9-aw-MOF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1532" y="1639.4302848575715"/>
+        </scene>
         <!--编辑-->
         <scene sceneID="aiw-7A-WiI">
             <objects>
