debug cell height

--- a/TODOList/TODOList/TDGoals/GoalList/View/TDGoalItemCell.xib
+++ b/TODOList/TODOList/TDGoals/GoalList/View/TDGoalItemCell.xib
@@ -15,22 +15,36 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="All-9B-kxB">
-                        <rect key="frame" x="15" y="11" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="351" verticalHuggingPriority="251" horizontalCompressionResistancePriority="850" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="All-9B-kxB">
+                        <rect key="frame" x="15" y="12" width="40" height="20"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Detail" textAlignment="right" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Jo-yt-wpG">
+                        <rect key="frame" x="65" y="12" width="240" height="20"/>
+                        <color key="backgroundColor" red="1" green="0.85882352939999995" blue="0.85882352939999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="All-9B-kxB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="3lh-dZ-EHQ"/>
-                    <constraint firstItem="All-9B-kxB" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="zOm-NV-Dc4"/>
+                    <constraint firstItem="3Jo-yt-wpG" firstAttribute="leading" secondItem="All-9B-kxB" secondAttribute="trailing" constant="10" id="2Bm-YP-zLw"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="All-9B-kxB" secondAttribute="bottom" constant="11.5" id="3n6-On-8gQ"/>
+                    <constraint firstAttribute="trailing" secondItem="3Jo-yt-wpG" secondAttribute="trailing" constant="15" id="Q50-QF-J3N"/>
+                    <constraint firstItem="3Jo-yt-wpG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="QZC-Yu-EGz"/>
+                    <constraint firstAttribute="bottom" secondItem="3Jo-yt-wpG" secondAttribute="bottom" constant="11.5" id="aEi-7Z-a83"/>
+                    <constraint firstItem="All-9B-kxB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="oQs-S5-D1n"/>
+                    <constraint firstItem="All-9B-kxB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="sTy-1A-Il7"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="labelDetail" destination="3Jo-yt-wpG" id="uM6-8j-6tY"/>
                 <outlet property="labelTitle" destination="All-9B-kxB" id="lme-cw-iWn"/>
             </connections>
             <point key="canvasLocation" x="-461" y="-220"/>
